# webPageBuilder

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: make_release.yml
src/: app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/plugins/: tauri_glue.ts
src/plugins/base_blocks/: blocks.ts  index.ts
src/plugins/charts/components/: LineChart.js
src/plugins/custom_code/: commands.ts  components.ts  index.ts
src/plugins/forms/: index.ts  traits.ts
src/plugins/navbar/: components.ts  index.ts
src/plugins/preset-mtb/: consts.ts  icon_map.ts  import.ts  index.ts  panels.ts
src/plugins/preset-mtb/blocks/: base_blocks.ts
src/plugins/preset-mtb/blocks/flexbox/: blocks.ts  index.ts
src/plugins/preset-mtb/commands/: index.ts  openExportCommand.ts  openImportCommand.ts  preview.ts  toggleImagesCommand.ts
src/plugins/preset-mtb/post-css/: index.ts
src/plugins/preset-mtb/tools/: palette.ts  resizer.ts  style_bg.ts  style_class_selector.ts  style_filters.ts
src/plugins/preset-mtb/tools/component-editor/: commands.ts  index.ts
src/plugins/preset-mtb/tools/component-editor/code-editor/: index.ts
src/plugins/preset-mtb/tools/style_gradient/: index.ts  styles.ts
src/plugins/swiper/: blocks.ts  components.ts  index.ts
src/plugins/tabs/: blocks.ts
